--- a/dev/flat_save_data.qmd
+++ b/dev/flat_save_data.qmd
@@ -241,9 +241,13 @@ raw_data <- get_raw_data(url = "https://github.com/b-rodrigues/rap4all/raw/maste
 
 flat_data <- clean_raw_data(raw_data)
 
-testthat::expect_true(
-            all(communes %in% unique(flat_data$locality))
-                      )
+test_that("Check if all communes are accounted for", {
+
+  expect_true(
+    all(communes %in% unique(flat_data$locality))
+  )
+
+})
 ```
 
 
@@ -325,6 +329,12 @@ get_laspeyeres <- function(dataset){
 
   which_dataset <- deparse(substitute(dataset))
 
+  stopifnot("dataset must be one of `commune_level_data`
+             or `country_level_data`" =
+              (which_dataset %in% c(
+                 "commune_level_data",
+                 "country_level_data")))
+    
   group_var <- if(grepl("commune", which_dataset)){
                  quo(locality)
                } else {
@@ -391,3 +401,55 @@ make_plot <- function(country_level_data, commune_level_data, commune){
 #'make_plot(commune_level_data_laspeyeres, "Luxembourg")
 #' }
 ```
+
+```{r tests-get_laspeyeres}
+
+test_that("Wrong data", {
+
+  expect_error(
+    get_laspeyeres(mtcars),
+    regexp = "dataset must be one of"
+  )
+
+})
+
+test_that("Empty data", {
+
+  expect_error(
+  # this subsetting results in an empty dataset
+    get_laspeyeres(subset(mtcars, am == 2))
+  )
+
+})
+
+test_that("get_laspeyeres() produces correct results", {
+
+  input_df <- expand.grid(
+    list("year" = c(2010, 2011),
+         "locality" = c("Bascharage", "Luxembourg"))
+  )
+
+  input_df$n_offers <- c(123, 101, 1230, 1010)
+  input_df$average_price_nominal_euros <- c(234, 345, 560, 670)
+  input_df$average_price_m2_nominal_euros <- c(23, 34, 56, 67)
+
+  expected_df <- input_df
+
+  # p0 should be always equal to the value in the first year
+  expected_df$p0 <- c(234, 234, 560, 560)
+  expected_df$p0_m2 <- c(23, 23, 56, 56)
+
+  # pl should be equal to the price divided by p0
+  expected_df$pl <- expected_df$average_price_nominal_euros / expected_df$p0 * 100
+  expected_df$pl_m2 <- expected_df$average_price_m2_nominal_euros / expected_df$p0_m2 * 100
+
+# rename data to make assertion pass
+commune_level_data <- input_df
+
+expect_equivalent(
+  expected_df, get_laspeyeres(commune_level_data)
+)
+
+})
+```
+
